--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
