--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -17,9 +17,11 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/fs-extra": "^9.0.13",
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
     "css-loader": "^6.7.1",
+    "fs-extra": "^10.0.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.70.0",
