--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -22,10 +22,12 @@
     "commander": "^9.0.0",
     "css-loader": "^6.7.1",
     "fs-extra": "^10.0.1",
+    "globby": "11.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpackbar": "^5.0.2"
   }
 }
