--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -17,17 +17,21 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@types/fs-extra": "^9.0.13",
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
     "css-loader": "^6.7.1",
+    "fork-ts-checker-webpack-plugin": "^7.2.1",
     "fs-extra": "^10.0.1",
     "globby": "11.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "react-refresh": "^0.11.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.2"
   }
 }
