--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -7,7 +7,7 @@
     "monado-scripts": "./bin/monado-scripts.js"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "rm -rf ./lib && tsc -p tsconfig.json"
   },
   "keywords": [],
   "author": "",
@@ -22,11 +22,15 @@
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "fs-extra": "^10.0.1",
     "globby": "11.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
