--- a/packages/monado-scripts/tsconfig.json
+++ b/packages/monado-scripts/tsconfig.json
@@ -22,13 +22,12 @@
 		// "reactNamespace": "",                             /* Specify the object invoked for `createElement`. This only applies when targeting `react` JSX emit. */
 		// "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
 		// "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
-
 		/* Modules */
 		"module": "commonjs" /* Specify what module code is generated. */,
+		// "module": "commonjs" /* Specify what module code is generated. */,
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
 		"moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
 		"declaration": false /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
-	
 		// "preserveValueImports": true,                     /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */
 
 		/* Interop Constraints */
