--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "wen",
   "license": "ISC",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "5.16.0",
     "typescript": "^4.6.2"
   }
 }
