--- a/packages/monado-cli/tsconfig.json
+++ b/packages/monado-cli/tsconfig.json
@@ -9,7 +9,7 @@
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
 		"moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
 		/* Emit */
-		"declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
+		"declaration": false /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
 		// "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
 		// "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
 		// "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
