--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -1,15 +1,19 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
     "monado-scripts": "./bin/monado-scripts.js"
   },
+  "types": "./typings/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./lib && tsc -p tsconfig.json"
+    "build": "rimraf ./lib && tsc -p tsconfig.json"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "monado"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -32,6 +36,7 @@
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
+    "rimraf": "^3.0.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
