--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -27,6 +27,7 @@
     "commander": "^9.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
+    "esbuild": "^0.14.27",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "fs-extra": "^10.0.1",
     "globby": "11.1.0",
@@ -37,6 +38,7 @@
     "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
     "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
