--- a/packages/monado-template/package.json
+++ b/packages/monado-template/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "monado-scripts build",
+    "start": "monado-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@monado/scripts": "workspace:^0.0.7"
+    "@types/react": "^17.0.41",
+    "@types/react-dom": "^17.0.14"
   }
 }
