--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
     "monado-scripts": "./bin/monado-scripts.js"
   },
-  "types": "./typings/index.d.ts",
+  "types": "./index.d.ts",
   "scripts": {
     "build": "rimraf ./lib && tsc -p tsconfig.json"
   },
@@ -38,6 +38,7 @@
     "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
     "rimraf": "^3.0.2",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
