--- a/packages/monado-scripts/tsconfig.json
+++ b/packages/monado-scripts/tsconfig.json
@@ -14,5 +14,5 @@
 		"skipLibCheck": true,
 	},
 	"exclude": ["lib", "node_modules"],
-	"include": ["src/**/*", "typings"]
+	"include": ["src/**/*", "typings", "index.d.ts"]
 }
