--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -22,12 +22,14 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@svgr/webpack": "^6.2.1",
     "@types/fs-extra": "^9.0.13",
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "esbuild": "^0.14.27",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "fs-extra": "^10.0.1",
     "globby": "11.1.0",
