--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -39,7 +39,9 @@
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
+    "resolve-url-loader": "^5.0.0",
     "rimraf": "^3.0.2",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.70.0",
