--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -36,18 +36,20 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.12",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
+    "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
     "resolve-url-loader": "^5.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.2"
   }
 }
