--- a/packages/monado-template/package.json
+++ b/packages/monado-template/package.json
@@ -11,13 +11,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "dependencies": {
+  "devDependencies": {
+    "tailwindcss": "^3.0.23",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "sass": "^1.49.9"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
