新增项目文件夹src目录别名支持

--- a/packages/monado-scripts/tsconfig.json
+++ b/packages/monado-scripts/tsconfig.json
@@ -3,16 +3,16 @@
 		"baseUrl": "./",
 		"jsx": "react-jsx",
 		"outDir": "lib",
-		"target": "es2018",
+		"target": "es6",
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"declaration": false,
 		"esModuleInterop": true,
-    "emitDeclarationOnly": false,
+		"emitDeclarationOnly": false,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		"skipLibCheck": true,
+		"skipLibCheck": true
 	},
 	"exclude": ["lib", "node_modules"],
-	"include": ["src/**/*", "typings", "index.d.ts"]
+	"include": ["src/**/*", "index.d.ts"]
 }
