--- a/packages/monado-template/package.json
+++ b/packages/monado-template/package.json
@@ -24,13 +24,14 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.0.23",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.0.23"
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   }
 }
