--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -24,8 +24,10 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "^6.2.1",
     "@types/fs-extra": "^9.0.13",
+    "@types/resolve": "^1.20.1",
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "esbuild": "^0.14.27",
@@ -41,6 +43,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
+    "resolve": "^1.22.0",
     "resolve-url-loader": "^5.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.6.0",
