--- a/packages/monado-scripts/tsconfig.json
+++ b/packages/monado-scripts/tsconfig.json
@@ -14,5 +14,5 @@
 		"skipLibCheck": true
 	},
 	"exclude": ["lib", "node_modules"],
-	"include": ["src/**/*", "index.d.ts"]
+	"include": ["src/**/*", "index.d.ts", "src/utils/.ts"]
 }
