--- a/packages/monado-scripts/package.json
+++ b/packages/monado-scripts/package.json
@@ -25,6 +25,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/fs-extra": "^9.0.13",
     "@types/resolve": "^1.20.1",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
     "copy-webpack-plugin": "^10.2.4",
@@ -51,6 +52,7 @@
     "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.70.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpackbar": "^5.0.2"
