--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "eslint": "5.16.0",
+    "eslint": "^8.11.0",
     "typescript": "^4.6.2"
   }
 }
