--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -26,10 +26,15 @@
   "devDependencies": {
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-react": "^7.29.4",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
+    "eslint-plugin-react-hooks": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2"
