--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "scripts": {
-    "build": "rm -rf ./lib&&tsc",
+    "build": "rimraf ./lib&&tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@types/validate-npm-package-name": "^3.0.3",
     "chalk": "^5.0.1",
     "commander": "^9.0.0",
     "inquirer": "^8.2.1",
@@ -26,6 +27,8 @@
   "dependencies": {
     "download-git-repo": "^3.0.2",
     "resolve": "^1.22.0",
+    "rimraf": "^3.0.2",
+    "validate-npm-package-name": "^3.0.0",
     "zx": "^5.2.0"
   }
 }
