--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,6 +25,8 @@
     "ora": "^6.1.0"
   },
   "dependencies": {
+    "@types/cross-spawn": "^6.0.2",
+    "cross-spawn": "^7.0.3",
     "download-git-repo": "^3.0.2",
     "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
