--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -51,6 +51,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
+    "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
