--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -2,8 +2,10 @@
 	"compilerOptions": {
 		"baseUrl": "./",
 		"jsx": "react-jsx",
+    "allowJs": true,
 		"outDir": "lib",
 		"target": "es6",
+    "pretty":true,
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"declaration": false,
@@ -13,6 +15,6 @@
 		"strict": true,
 		"skipLibCheck": true
 	},
-	"exclude": ["lib", "node_modules"],
+	"exclude": ["lib", "node_modules", "bin"],
 	"include": ["src/**/*", "index.d.ts", "src/utils/.ts"]
 }
