--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@mdx-js/loader": "^2.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "^6.2.1",
     "@types/fs-extra": "^9.0.13",
