--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/cli",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "创建react项目的脚手架",
   "main": "lib/index.js",
   "bin": {
@@ -18,13 +18,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "@types/validate-npm-package-name": "^3.0.3",
+    "@types/validate-npm-package-name": "^3.0.3"
+  },
+  "dependencies": {
     "chalk": "^5.0.1",
     "commander": "^9.0.0",
     "inquirer": "^8.2.1",
-    "ora": "^6.1.0"
-  },
-  "dependencies": {
+    "ora": "^6.1.0",
     "@types/cross-spawn": "^6.0.2",
     "cross-spawn": "^7.0.3",
     "download-git-repo": "^3.0.2",
