修改包管理工具

--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -4,10 +4,12 @@
 		"jsx": "react-jsx",
     "allowJs": true,
 		"outDir": "lib",
-		"target": "es6",
+		"target": "ES2018",
     "pretty":true,
 		"module": "commonjs",
+    "noUnusedLocals":true,
 		"moduleResolution": "node",
+    "stripInternal":true,
 		"declaration": false,
 		"esModuleInterop": true,
 		"emitDeclarationOnly": false,
