--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "monado",
-  "version": "1.0.0",
+  "version": "1.0.2",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,10 +10,14 @@
   "keywords": [],
   "author": "wen",
   "license": "ISC",
+  "workspaces": [
+    "packages/*"
+  ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^8.11.0",
     "typescript": "^4.6.2"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
