--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.17",
+  "version": "0.0.26",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -30,6 +30,7 @@
     "babel-loader": "^8.2.3",
     "commander": "^9.0.0",
     "copy-webpack-plugin": "^10.2.4",
+    "core-js": "^3.21.1",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "esbuild": "^0.14.27",
@@ -45,6 +46,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.4.2",
     "react-refresh": "^0.11.0",
+    "regenerator-runtime": "^0.13.9",
     "resolve": "^1.22.0",
     "resolve-url-loader": "^5.0.0",
     "rimraf": "^3.0.2",
