--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.28",
+  "version": "0.0.30",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -28,6 +28,7 @@
     "@types/resolve": "^1.20.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "babel-loader": "^8.2.3",
+    "chalk": "4.1.2",
     "commander": "^9.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "core-js": "^3.21.1",
