--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -24,6 +24,7 @@
     "@mdx-js/loader": "^2.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "^6.2.1",
+    "@swc/core": "^1.2.171",
     "@types/fs-extra": "^9.0.13",
     "@types/resolve": "^1.20.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -53,6 +54,7 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "swc-loader": "^0.2.0",
     "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "typescript": "^4.6.2",
