--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,1 @@
-nodeLinker: node-modules
-
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-
-yarnPath: .yarn/releases/yarn-3.2.0.cjs
+yarnPath: ".yarn/releases/yarn-berry.cjs"
