--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -26,6 +26,7 @@
     "@svgr/webpack": "^6.2.1",
     "@swc/core": "^1.2.171",
     "@types/fs-extra": "^9.0.13",
+    "@types/node": "^17.0.29",
     "@types/resolve": "^1.20.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "babel-loader": "^8.2.3",
