--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.32",
+  "version": "0.0.33",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -25,6 +25,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "^6.2.1",
     "@swc/core": "^1.2.171",
+    "@swc/helpers": "^0.3.8",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.29",
     "@types/resolve": "^1.20.1",
@@ -58,6 +59,7 @@
     "swc-loader": "^0.2.0",
     "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
