修复react-router-dom参数路由刷新会白屏的问题

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.36",
+  "version": "0.0.38",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -12,7 +12,9 @@
   },
   "keywords": [
     "react",
-    "monado"
+    "monado",
+    "monado-scripts",
+    "react-cli"
   ],
   "author": "",
   "license": "ISC",
