更新@monado/scripts配置文件支持字段，现在支持设置开发代理

--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -3,7 +3,7 @@
 		"baseUrl": "./",
 		"jsx": "react-jsx",
     "allowJs": true,
-		"outDir": "lib",
+		"outDir": "dist",
 		"target": "ES2018",
     "pretty":true,
 		"module": "commonjs",
@@ -17,6 +17,6 @@
 		"strict": true,
 		"skipLibCheck": true
 	},
-	"exclude": ["lib", "node_modules", "bin"],
+	"exclude": ["dist", "node_modules", "bin"],
 	"include": ["src/**/*", "index.d.ts", "src/utils/.ts"]
 }
