--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.39",
+  "version": "0.0.40",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "types": "./index.d.ts",
   "scripts": {
-    "build": "rimraf ./lib && tsc -p tsconfig.json"
+    "build": "rimraf ./dist && tsc -p tsconfig.json"
   },
   "keywords": [
     "react",
