--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.40",
+  "version": "0.0.41",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -17,7 +17,7 @@
     "react-cli"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
