--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.42",
+  "version": "0.0.43",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -19,18 +19,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
     "@mdx-js/loader": "^2.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "^6.2.1",
+    "@swc/core": "^1.2.182",
+    "@swc/helpers": "^0.3.13",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.29",
     "@types/resolve": "^1.20.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
-    "babel-loader": "^8.2.3",
     "browserslist": "^4.20.3",
     "chalk": "4.1.2",
     "commander": "^9.0.0",
@@ -38,7 +35,6 @@
     "core-js": "^3.21.1",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
-    "esbuild": "^0.14.27",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "fs-extra": "^10.0.1",
@@ -57,6 +53,7 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "swc-loader": "^0.2.0",
     "tailwindcss": "^3.0.23",
     "terser-webpack-plugin": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
