--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "0.0.44",
+  "version": "0.0.45",
   "description": "react应用零配置构建工具",
   "main": "index.js",
   "bin": {
@@ -20,7 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "@mdx-js/loader": "^2.1.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.6",
     "@svgr/webpack": "^6.2.1",
     "@swc/core": "^1.2.182",
     "@swc/helpers": "^0.3.13",
@@ -46,7 +46,7 @@
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.4.2",
-    "react-refresh": "^0.11.0",
+    "react-refresh": "0.13.0",
     "regenerator-runtime": "^0.13.9",
     "resolve": "^1.22.0",
     "resolve-url-loader": "^5.0.0",
