--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -18,5 +18,5 @@
 		"skipLibCheck": true
 	},
 	"exclude": ["dist", "node_modules", "bin"],
-	"include": ["src/**/*", "index.d.ts", "src/utils/.ts"]
+	"include": ["src/**/*", "index.d.ts"]
 }
