--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
 	},
 	"rules": {
 		"semi": ["error", "always"],
-		"no-unused-vars": "warn",
+		"no-unused-vars": "error",
 		"no-console": "off",
 		"no-mixed-spaces-and-tabs": "off"
 	}
