--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -55,6 +55,7 @@
     "globby": "13.1.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "ora": "^6.1.2",
     "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.0.0",
@@ -73,7 +74,6 @@
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpackbar": "^5.0.2"
+    "webpack-dev-server": "^4.9.3"
   }
 }
