--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -43,8 +43,8 @@
     "@types/resolve": "^1.20.2",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "browserslist": "^4.21.1",
+    "cac": "^6.7.12",
     "chalk": "5.0.1",
-    "commander": "^9.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.23.3",
     "css-loader": "^6.7.1",
