--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monado/scripts",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "description": "react应用零配置构建工具",
   "main": "./lib/index.js",
   "bin": {
@@ -36,17 +36,18 @@
     "@mdx-js/loader": "^2.1.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.7",
     "@svgr/webpack": "^6.3.1",
-    "@swc/core": "^1.2.224",
-    "@swc/helpers": "^0.4.3",
+    "@swc/core": "^1.2.237",
+    "@swc/helpers": "^0.4.6",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^18.6.4",
+    "@types/node": "^18.7.6",
     "@types/resolve": "^1.20.2",
-    "@types/webpack-bundle-analyzer": "^4.4.1",
+    "@types/webpack-bundle-analyzer": "^4.4.2",
     "browserslist": "^4.21.3",
     "cac": "^6.7.12",
     "chalk": "5.0.1",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.24.1",
+    "core-js-compat": "^3.24.1",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
@@ -61,7 +62,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.0.1",
     "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.7.2",
+    "postcss-preset-env": "^7.8.0",
     "react-refresh": "0.14.0",
     "regenerator-runtime": "^0.13.9",
     "resolve": "^1.22.1",
@@ -70,10 +71,10 @@
     "style-loader": "^3.3.1",
     "swc-loader": "^0.2.3",
     "tailwindcss": "^3.1.8",
-    "terser-webpack-plugin": "^5.3.3",
+    "terser-webpack-plugin": "^5.3.5",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.10.0"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
